# blocklister

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.toml
src/: main.rs
