[package]
name = "blackholer"
version = "0.1.0"
authors = ["Thom May <thom@may.yt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "*", features=["blocking"]}
toml = "*"
anyhow = "1.0.31"
serde = { version = "1.0", features = ["derive"] }
