[package]
name = "blocklister"
version = "0.1.0"
authors = ["Thom May <thom@may.yt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "*"
toml = "*"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3.0"
tokio = { version = "0.2", features = ["full"] }
